ProjectParser.py
# Generated from ProjectParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ProjectParser ( Parser ):

    grammarFileName = "ProjectParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'bool'", "'else'", "'float'", "'if'", 
                     "'int'", "'while'", "'string'", "'read'", "'write'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','", 
                     "'='", "'>'", "'<'", "'!'", "'=='", "'!='", "'&&'", 
                     "'||'", "'+'", "'-'", "'*'", "'/'", "'%'", "'.'" ]

    symbolicNames = [ "<INVALID>", "BOOL", "ELSE", "FLOAT", "IF", "INT", 
                      "WHILE", "STRING", "READ", "WRITE", "INT_LITERAL", 
                      "FLOAT_LITERAL", "BOOL_LITERAL", "STRING_LITERAL", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", 
                      "RBRACKET", "SEMI", "COMMA", "ASSIGN", "GT", "LT", 
                      "BANG", "EQUAL", "NOTEQUAL", "AND", "OR", "ADD", "SUB", 
                      "MUL", "DIV", "MOD", "DOT", "WS", "LINE_COMMENT", 
                      "IDENTIFIER" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_type = 2
    RULE_expression = 3

    ruleNames =  [ "program", "statement", "type", "expression" ]

    EOF = Token.EOF
    BOOL=1
    ELSE=2
    FLOAT=3
    IF=4
    INT=5
    WHILE=6
    STRING=7
    READ=8
    WRITE=9
    INT_LITERAL=10
    FLOAT_LITERAL=11
    BOOL_LITERAL=12
    STRING_LITERAL=13
    LPAREN=14
    RPAREN=15
    LBRACE=16
    RBRACE=17
    LBRACKET=18
    RBRACKET=19
    SEMI=20
    COMMA=21
    ASSIGN=22
    GT=23
    LT=24
    BANG=25
    EQUAL=26
    NOTEQUAL=27
    AND=28
    OR=29
    ADD=30
    SUB=31
    MUL=32
    DIV=33
    MOD=34
    DOT=35
    WS=36
    LINE_COMMENT=37
    IDENTIFIER=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ProjectParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProjectParser.StatementContext)
            else:
                return self.getTypedRuleContext(ProjectParser.StatementContext,i)


        def getRuleIndex(self):
            return ProjectParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ProjectParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 11
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 277060091898) != 0):
                self.state = 8
                self.statement()
                self.state = 13
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 14
            self.match(ProjectParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ProjectParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ExprStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProjectParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(ProjectParser.ExpressionContext,0)

        def SEMI(self):
            return self.getToken(ProjectParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprStmt" ):
                listener.enterExprStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprStmt" ):
                listener.exitExprStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprStmt" ):
                return visitor.visitExprStmt(self)
            else:
                return visitor.visitChildren(self)


    class DeclArrayStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProjectParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def type_(self):
            return self.getTypedRuleContext(ProjectParser.TypeContext,0)

        def IDENTIFIER(self):
            return self.getToken(ProjectParser.IDENTIFIER, 0)
        def LBRACKET(self):
            return self.getToken(ProjectParser.LBRACKET, 0)
        def expression(self):
            return self.getTypedRuleContext(ProjectParser.ExpressionContext,0)

        def RBRACKET(self):
            return self.getToken(ProjectParser.RBRACKET, 0)
        def SEMI(self):
            return self.getToken(ProjectParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclArrayStmt" ):
                listener.enterDeclArrayStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclArrayStmt" ):
                listener.exitDeclArrayStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclArrayStmt" ):
                return visitor.visitDeclArrayStmt(self)
            else:
                return visitor.visitChildren(self)


    class WhileStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProjectParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(ProjectParser.WHILE, 0)
        def LPAREN(self):
            return self.getToken(ProjectParser.LPAREN, 0)
        def expression(self):
            return self.getTypedRuleContext(ProjectParser.ExpressionContext,0)

        def RPAREN(self):
            return self.getToken(ProjectParser.RPAREN, 0)
        def statement(self):
            return self.getTypedRuleContext(ProjectParser.StatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStmt" ):
                listener.enterWhileStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStmt" ):
                listener.exitWhileStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStmt" ):
                return visitor.visitWhileStmt(self)
            else:
                return visitor.visitChildren(self)


    class ReadStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProjectParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def READ(self):
            return self.getToken(ProjectParser.READ, 0)
        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(ProjectParser.IDENTIFIER)
            else:
                return self.getToken(ProjectParser.IDENTIFIER, i)
        def SEMI(self):
            return self.getToken(ProjectParser.SEMI, 0)
        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ProjectParser.COMMA)
            else:
                return self.getToken(ProjectParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReadStmt" ):
                listener.enterReadStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReadStmt" ):
                listener.exitReadStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReadStmt" ):
                return visitor.visitReadStmt(self)
            else:
                return visitor.visitChildren(self)


    class IfStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProjectParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(ProjectParser.IF, 0)
        def LPAREN(self):
            return self.getToken(ProjectParser.LPAREN, 0)
        def expression(self):
            return self.getTypedRuleContext(ProjectParser.ExpressionContext,0)

        def RPAREN(self):
            return self.getToken(ProjectParser.RPAREN, 0)
        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProjectParser.StatementContext)
            else:
                return self.getTypedRuleContext(ProjectParser.StatementContext,i)

        def ELSE(self):
            return self.getToken(ProjectParser.ELSE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)


    class BlockStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProjectParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LBRACE(self):
            return self.getToken(ProjectParser.LBRACE, 0)
        def RBRACE(self):
            return self.getToken(ProjectParser.RBRACE, 0)
        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProjectParser.StatementContext)
            else:
                return self.getTypedRuleContext(ProjectParser.StatementContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockStmt" ):
                listener.enterBlockStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockStmt" ):
                listener.exitBlockStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockStmt" ):
                return visitor.visitBlockStmt(self)
            else:
                return visitor.visitChildren(self)


    class DeclStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProjectParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def type_(self):
            return self.getTypedRuleContext(ProjectParser.TypeContext,0)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(ProjectParser.IDENTIFIER)
            else:
                return self.getToken(ProjectParser.IDENTIFIER, i)
        def SEMI(self):
            return self.getToken(ProjectParser.SEMI, 0)
        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ProjectParser.COMMA)
            else:
                return self.getToken(ProjectParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclStmt" ):
                listener.enterDeclStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclStmt" ):
                listener.exitDeclStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclStmt" ):
                return visitor.visitDeclStmt(self)
            else:
                return visitor.visitChildren(self)


    class EmptyStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProjectParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SEMI(self):
            return self.getToken(ProjectParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmptyStmt" ):
                listener.enterEmptyStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmptyStmt" ):
                listener.exitEmptyStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEmptyStmt" ):
                return visitor.visitEmptyStmt(self)
            else:
                return visitor.visitChildren(self)


    class WriteStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProjectParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WRITE(self):
            return self.getToken(ProjectParser.WRITE, 0)
        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProjectParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ProjectParser.ExpressionContext,i)

        def SEMI(self):
            return self.getToken(ProjectParser.SEMI, 0)
        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ProjectParser.COMMA)
            else:
                return self.getToken(ProjectParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWriteStmt" ):
                listener.enterWriteStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWriteStmt" ):
                listener.exitWriteStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWriteStmt" ):
                return visitor.visitWriteStmt(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = ProjectParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 82
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                localctx = ProjectParser.EmptyStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 16
                self.match(ProjectParser.SEMI)
                pass

            elif la_ == 2:
                localctx = ProjectParser.DeclStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 17
                self.type_()
                self.state = 18
                self.match(ProjectParser.IDENTIFIER)
                self.state = 23
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==21:
                    self.state = 19
                    self.match(ProjectParser.COMMA)
                    self.state = 20
                    self.match(ProjectParser.IDENTIFIER)
                    self.state = 25
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 26
                self.match(ProjectParser.SEMI)
                pass

            elif la_ == 3:
                localctx = ProjectParser.DeclArrayStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 28
                self.type_()
                self.state = 29
                self.match(ProjectParser.IDENTIFIER)
                self.state = 30
                self.match(ProjectParser.LBRACKET)
                self.state = 31
                self.expression(0)
                self.state = 32
                self.match(ProjectParser.RBRACKET)
                self.state = 33
                self.match(ProjectParser.SEMI)
                pass

            elif la_ == 4:
                localctx = ProjectParser.ExprStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 35
                self.expression(0)
                self.state = 36
                self.match(ProjectParser.SEMI)
                pass

            elif la_ == 5:
                localctx = ProjectParser.ReadStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 38
                self.match(ProjectParser.READ)
                self.state = 39
                self.match(ProjectParser.IDENTIFIER)
                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==21:
                    self.state = 40
                    self.match(ProjectParser.COMMA)
                    self.state = 41
                    self.match(ProjectParser.IDENTIFIER)
                    self.state = 46
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 47
                self.match(ProjectParser.SEMI)
                pass

            elif la_ == 6:
                localctx = ProjectParser.WriteStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 48
                self.match(ProjectParser.WRITE)
                self.state = 49
                self.expression(0)
                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==21:
                    self.state = 50
                    self.match(ProjectParser.COMMA)
                    self.state = 51
                    self.expression(0)
                    self.state = 56
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 57
                self.match(ProjectParser.SEMI)
                pass

            elif la_ == 7:
                localctx = ProjectParser.BlockStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 59
                self.match(ProjectParser.LBRACE)
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 277060091898) != 0):
                    self.state = 60
                    self.statement()
                    self.state = 65
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 66
                self.match(ProjectParser.RBRACE)
                pass

            elif la_ == 8:
                localctx = ProjectParser.IfStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 67
                self.match(ProjectParser.IF)
                self.state = 68
                self.match(ProjectParser.LPAREN)
                self.state = 69
                self.expression(0)
                self.state = 70
                self.match(ProjectParser.RPAREN)
                self.state = 71
                self.statement()
                self.state = 74
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                if la_ == 1:
                    self.state = 72
                    self.match(ProjectParser.ELSE)
                    self.state = 73
                    self.statement()


                pass

            elif la_ == 9:
                localctx = ProjectParser.WhileStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 76
                self.match(ProjectParser.WHILE)
                self.state = 77
                self.match(ProjectParser.LPAREN)
                self.state = 78
                self.expression(0)
                self.state = 79
                self.match(ProjectParser.RPAREN)
                self.state = 80
                self.statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(ProjectParser.INT, 0)

        def FLOAT(self):
            return self.getToken(ProjectParser.FLOAT, 0)

        def BOOL(self):
            return self.getToken(ProjectParser.BOOL, 0)

        def STRING(self):
            return self.getToken(ProjectParser.STRING, 0)

        def getRuleIndex(self):
            return ProjectParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = ProjectParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 170) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ProjectParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class IntExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProjectParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT_LITERAL(self):
            return self.getToken(ProjectParser.INT_LITERAL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntExpr" ):
                listener.enterIntExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntExpr" ):
                listener.exitIntExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntExpr" ):
                return visitor.visitIntExpr(self)
            else:
                return visitor.visitChildren(self)


    class AddSubConcatExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProjectParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProjectParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ProjectParser.ExpressionContext,i)

        def ADD(self):
            return self.getToken(ProjectParser.ADD, 0)
        def SUB(self):
            return self.getToken(ProjectParser.SUB, 0)
        def DOT(self):
            return self.getToken(ProjectParser.DOT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddSubConcatExpr" ):
                listener.enterAddSubConcatExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddSubConcatExpr" ):
                listener.exitAddSubConcatExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddSubConcatExpr" ):
                return visitor.visitAddSubConcatExpr(self)
            else:
                return visitor.visitChildren(self)


    class OrExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProjectParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProjectParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ProjectParser.ExpressionContext,i)

        def OR(self):
            return self.getToken(ProjectParser.OR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrExpr" ):
                listener.enterOrExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrExpr" ):
                listener.exitOrExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOrExpr" ):
                return visitor.visitOrExpr(self)
            else:
                return visitor.visitChildren(self)


    class MulDivModExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProjectParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProjectParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ProjectParser.ExpressionContext,i)

        def MUL(self):
            return self.getToken(ProjectParser.MUL, 0)
        def DIV(self):
            return self.getToken(ProjectParser.DIV, 0)
        def MOD(self):
            return self.getToken(ProjectParser.MOD, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMulDivModExpr" ):
                listener.enterMulDivModExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMulDivModExpr" ):
                listener.exitMulDivModExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMulDivModExpr" ):
                return visitor.visitMulDivModExpr(self)
            else:
                return visitor.visitChildren(self)


    class ParensExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProjectParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(ProjectParser.LPAREN, 0)
        def expression(self):
            return self.getTypedRuleContext(ProjectParser.ExpressionContext,0)

        def RPAREN(self):
            return self.getToken(ProjectParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParensExpr" ):
                listener.enterParensExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParensExpr" ):
                listener.exitParensExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParensExpr" ):
                return visitor.visitParensExpr(self)
            else:
                return visitor.visitChildren(self)


    class ArrayAssignExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProjectParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(ProjectParser.IDENTIFIER, 0)
        def LBRACKET(self):
            return self.getToken(ProjectParser.LBRACKET, 0)
        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProjectParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ProjectParser.ExpressionContext,i)

        def RBRACKET(self):
            return self.getToken(ProjectParser.RBRACKET, 0)
        def ASSIGN(self):
            return self.getToken(ProjectParser.ASSIGN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayAssignExpr" ):
                listener.enterArrayAssignExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayAssignExpr" ):
                listener.exitArrayAssignExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayAssignExpr" ):
                return visitor.visitArrayAssignExpr(self)
            else:
                return visitor.visitChildren(self)


    class StringExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProjectParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING_LITERAL(self):
            return self.getToken(ProjectParser.STRING_LITERAL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringExpr" ):
                listener.enterStringExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringExpr" ):
                listener.exitStringExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStringExpr" ):
                return visitor.visitStringExpr(self)
            else:
                return visitor.visitChildren(self)


    class FloatExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProjectParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FLOAT_LITERAL(self):
            return self.getToken(ProjectParser.FLOAT_LITERAL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFloatExpr" ):
                listener.enterFloatExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFloatExpr" ):
                listener.exitFloatExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFloatExpr" ):
                return visitor.visitFloatExpr(self)
            else:
                return visitor.visitChildren(self)


    class EqExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProjectParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProjectParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ProjectParser.ExpressionContext,i)

        def EQUAL(self):
            return self.getToken(ProjectParser.EQUAL, 0)
        def NOTEQUAL(self):
            return self.getToken(ProjectParser.NOTEQUAL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEqExpr" ):
                listener.enterEqExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEqExpr" ):
                listener.exitEqExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqExpr" ):
                return visitor.visitEqExpr(self)
            else:
                return visitor.visitChildren(self)


    class NotExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProjectParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BANG(self):
            return self.getToken(ProjectParser.BANG, 0)
        def expression(self):
            return self.getTypedRuleContext(ProjectParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNotExpr" ):
                listener.enterNotExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNotExpr" ):
                listener.exitNotExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNotExpr" ):
                return visitor.visitNotExpr(self)
            else:
                return visitor.visitChildren(self)


    class ArrayAccessExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ProjectParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(ProjectParser.IDENTIFIER, 0)
        def LBRACKET(self):
            return self.getToken(ProjectParser.LBRACKET, 0)
        def expression(self):
            return self.getTypedRuleContext(ProjectParser.ExpressionContext,0)

        def RBRACKET(self):
            return self.getToken(ProjectParser.RBRACKET, 0)
